@@ -4,12 +4,19 @@
 # module build (and probably the other interpretors as well).
 export DEB_BUILD_MAINT_OPTIONS = hardening=+bindnow
 
+# Link with --as-needed so that webauth-utils doesn't inherit the shared
+# library dependencies of libwebauth.
+export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
+
 ifndef PERL
     PERL = /usr/bin/perl
 endif
 
 %:
-	dh $@
+	dh $@ --with autoreconf
+
+override_dh_autoreconf:
+	dh_autoreconf --as-needed
 
 override_dh_auto_configure:
 	dh_auto_configure -- --libdir=/usr/lib --libexecdir=/usr/lib \
