@@ -24,6 +24,9 @@ webauth (4.2.0-1) UNRELEASED; urgency=low
     creating the WebAuth context from an existing APR pool).
   * Switch to xz compression for the upstream and Debian tarballs and for
     the data element of the generated binary packages.
+  * Use dh-autoreconf to always regenerate the build system from source.
+    Link with --as-needed to ensure we don't pick up unnecessary shared
+    library dependencies.
   * Move single-debian-patch to local-options and patch-header to
     local-patch-header so that they only apply to the packages I build and
     NMUs get regular version-numbered patches.
